--- a/package.json
+++ b/package.json
@@ -10,7 +10,10 @@
     "server": "npm run watch --prefix server",
     "client": "npm start --prefix client",
     "watch": "npm run server & npm run client",
-    "test": "npm run test --prefix client && npm run test --prefix server"
+    "deploy": "npm run build --prefix client && npm start --prefix server",
+    "test": "npm test --prefix client && npm test --prefix server",
+    "deploy-cluster": "npm run build --prefix client && npm run cluster --prefix server"
+
   },
   "keywords": [],
   "author": "",
