--- a/server/package.json
+++ b/server/package.json
@@ -4,19 +4,29 @@
   "description": "",
   "main": "src/server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest --detectOpenHandles",
+    "test-watch": "jest --watch --detectOpenHandles",
     "start": "set PORT=5000 && node src/server.js",
-    "watch": "nodemon src/server.js"
+    "watch": "nodemon src/server.js",
+    "cluster": "pm2 start src/server.js -i max"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
+  "jest":{
+    "testEnvironment":"node"
+  },
   "dependencies": {
     "cors": "^2.8.5",
     "csv-parse": "^5.5.6",
-    "express": "^4.21.0"
+    "express": "^4.21.0",
+    "mongoose": "^8.7.0",
+    "morgan": "^1.10.0",
+    "pm2": "^5.4.2"
   },
   "devDependencies": {
-    "nodemon": "^3.1.7"
+    "jest": "^29.7.0",
+    "nodemon": "^3.1.7",
+    "supertest": "^7.0.0"
   }
 }
