--- a/server/package.json
+++ b/server/package.json
@@ -13,10 +13,11 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "jest":{
-    "testEnvironment":"node"
+  "jest": {
+    "testEnvironment": "node"
   },
   "dependencies": {
+    "axios": "^1.7.7",
     "cors": "^2.8.5",
     "csv-parse": "^5.5.6",
     "express": "^4.21.0",
