--- a/server/package.json
+++ b/server/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "jest --detectOpenHandles",
     "test-watch": "jest --watch --detectOpenHandles",
-    "start": "set PORT=5000 && node src/server.js",
+    "start": "node src/server.js",
     "watch": "nodemon src/server.js",
     "cluster": "pm2 start src/server.js -i max"
   },
@@ -20,6 +20,7 @@
     "axios": "^1.7.7",
     "cors": "^2.8.5",
     "csv-parse": "^5.5.6",
+    "dotenv": "^16.4.5",
     "express": "^4.21.0",
     "mongoose": "^8.7.0",
     "morgan": "^1.10.0",
