--- a/.github/workflows/node.yml
+++ b/.github/workflows/node.yml
@@ -1,9 +1,9 @@
 name: TerraXplora
 on:
   push:
-    branches: [master]
+    branches: [main]
   pull_request:
-    branches: [master]
+    branches: [main]
 jobs:
   build:
     runs-on: ubuntu-latest
